--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimaryVariant">#00884a</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#f99b29</item>
-        <item name="colorSecondaryVariant">#f3702d</item>
+        <item name="colorSecondary">#00a94f</item>
+        <item name="colorSecondaryVariant">#00884a</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
@@ -23,6 +23,5 @@
 
     <style name="Theme.LoyolaSocios.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.LoyolaSocios.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="Theme.LoyolaSocios.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 </resources>
