--- a/app/src/main/res/layout/fragment_ahorra_nosotros.xml
+++ b/app/src/main/res/layout/fragment_ahorra_nosotros.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_ahorra_nosotros">
+    android:background="@drawable/fondo_ahorra_nosotros"
+    >
 
     <ImageView
         android:id="@+id/imv_banner"
@@ -16,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageView
         android:id="@+id/btn_cuenta_ahorro"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -25,7 +26,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imv_banner" />
+        app:layout_constraintTop_toBottomOf="@+id/imv_banner"
+        />
 
     <TextView
         android:textAlignment="center"
@@ -36,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_cuenta_ahorro" />
 
-    <Button
+    <ImageView
         android:id="@+id/btn_deposito_plazo_fijo"
         android:layout_width="150dp"
         android:layout_height="150dp"
