--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,6 +44,7 @@
                 android:orientation="vertical"
                 android:gravity="center">
                 <ImageView
+                    android:id="@+id/ahoraConNostrosBtn"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:src="@drawable/btn_ahorra_con_nosotros"/>
