--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -124,6 +124,7 @@
             android:paddingVertical="8dp"
             android:paddingHorizontal="16dp">
             <LinearLayout
+                android:id="@+id/recomendacionesSeguridad"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_width="wrap_content"
