--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -43,11 +45,13 @@
             android:id="@+id/nav_registrarse"
             android:icon="@drawable/zm_app_user_default"
             android:title="@string/menu_registrarse"
+            app:showAsAction="never"
             />
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_login_sso"
             android:title="@string/menu_inicial_session"
+            app:showAsAction="never"
             />
     </group>
 </menu>
