--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -129,16 +129,16 @@
         tools:layout="@layout/fragment_recomendacion_seguridad"
         />
 
-    <fragment
-        android:id="@+id/nav_registrarse"
-        android:name="app.wiserkronox.loyolasocios.view.ui.ManualRegisterFragment"
-        android:label="Registrarse"
-        tools:layout="@layout/fragment_manual_register"
-        />
-    <fragment
-        android:id="@+id/nav_login"
-        android:name="app.wiserkronox.loyolasocios.view.ui.WithoutSessionFragment"
-        android:label="Iniciar Sesión"
-        tools:layout="@layout/fragment_without_session"
-        />
+<!--    <fragment-->
+<!--        android:id="@+id/nav_registrarse"-->
+<!--        android:name="app.wiserkronox.loyolasocios.view.ui.ManualRegisterFragment"-->
+<!--        android:label="Registrarse"-->
+<!--        tools:layout="@layout/fragment_manual_register"-->
+<!--        />-->
+<!--    <fragment-->
+<!--        android:id="@+id/nav_login"-->
+<!--        android:name="app.wiserkronox.loyolasocios.view.ui.WithoutSessionFragment"-->
+<!--        android:label="Iniciar Sesión"-->
+<!--        tools:layout="@layout/fragment_without_session"-->
+<!--        />-->
 </navigation>
